// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/GraphNodeDataField.vue snapshot BONE 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="field-with-button"
  >
    <div
      class="field"
    >
      
      <span
        class="select-root"
      >
        <select>
          <option
            value=""
          >
            -- None --
          </option>
          
          
        </select>
      </span>
      
    </div>
    <div
      class="button"
    >
      
      <button>
        <svg
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="rotate(45 10 10)"
          >
            <path
              d="M8 2 A2 2 0 0 1 12 2 L12 5 L13 5 L13 7 L7 7 L7 5 L8 5z"
              fill="#000"
              stroke="none"
              stroke-linejoin="round"
            />
            <path
              d="M11.5 7 L11.5 17 L10 19 L8.5 17 L8.5 7"
              fill="none"
              stroke="#000"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </button>
      
    </div>
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot BOOLEAN 1`] = `
<div>
  <h5>
    value
  </h5>
  <label
    class=""
  >
    <input
      type="checkbox"
    />
    <!--v-if-->
  </label>
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot COLOR 1`] = `
<div>
  <h5>
    value
  </h5>
  <div
    class="color-block"
  >
    <button
      class="color-button"
      type="button"
    >
      <div
        class="color-rect"
        style="background-color: rgb(0, 0, 0);"
      />
    </button>
    <!--v-if-->
  </div>
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot OBJECT 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <span
    class="select-root"
  >
    <select>
      <option
        value=""
      >
        -- None --
      </option>
      
      
    </select>
  </span>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot SCALER enum 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <span
    class="select-root"
  >
    <select>
      <!--v-if-->
      
      <option
        value="0"
      >
        0: pad
      </option>
      <option
        value="1"
      >
        1: reflect
      </option>
      <option
        value="2"
      >
        2: repeat
      </option>
      
    </select>
  </span>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot SCALER number 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="slider-wrapper"
  >
    <div
      class="slider-background"
      style="transform: scaleX(0);"
    />
    <input
      type="text"
    />
    <div
      class="slider-forward"
    />
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot TEXT 1`] = `
<div>
  <h5>
    value
  </h5>
  <div
    class="input-wrapper"
  >
    <input
      type="text"
    />
    <div
      class="input-forward"
    />
  </div>
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot TRANSFORM 1`] = `
<div>
  <h5>
    value
  </h5>
  <div>
    <div
      class="row-block inline-field"
    >
      
      <label
        style="width: 10px;"
      >
        tr
      </label>
      <div
        class="inline-content"
      >
        
         ( 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         , 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         ) 
        
      </div>
      
    </div>
    <div
      class="row-block inline-field"
    >
      
      <label
        style="width: 10px;"
      >
        ro
      </label>
      <div
        class="inline-content"
      >
        
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
        
      </div>
      
    </div>
    <div
      class="row-block inline-field"
    >
      
      <label
        style="width: 10px;"
      >
        sc
      </label>
      <div
        class="inline-content"
      >
        
         ( 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         , 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         ) 
        
      </div>
      
    </div>
    <div
      class="row-block inline-field"
    >
      
      <label
        style="width: 10px;"
      >
        or
      </label>
      <div
        class="inline-content"
      >
        
         ( 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         , 
        <div
          class="slider-wrapper"
        >
          <div
            class="slider-background"
            style="transform: scaleX(0);"
          />
          <input
            type="text"
          />
          <div
            class="slider-forward"
          />
        </div>
         ) 
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot VECTOR2 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      x
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
      </div>
      
    </div>
    
  </div>
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      y
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
      </div>
      
    </div>
    
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot disabled 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      x
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          disabled=""
          type="text"
        />
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      y
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          disabled=""
          type="text"
        />
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot incompatible types 1`] = `<!--v-if-->`;
